--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Team</h2>
-          <!--<p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>-->
+          <!--<p> Optional description </p>-->
         </div>
         
-        <div class="row">
+        <div class="row" style="justify-content:center;">
 
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
@@ -231,11 +231,11 @@
               </div>
             </div>
           </div>
-<!--
+
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-55.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -253,7 +253,7 @@
           <div class="col-lg-2 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="400">
               <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/team/team-66.jpg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -267,7 +267,7 @@
               </div>
             </div>
           </div>
-        -->
+        
         </div>
 
       </div>
